removed app4 and replaced with tableview factories demo