@@ -96,6 +96,19 @@ task runApp4(type: JavaExec) {
     }
 }
 
+task runApp5(type: JavaExec) {
+    group = "Application"
+    description = "Runs Application 5 - Table View Cell Factories"
+    classpath sourceSets.main.runtimeClasspath
+    main = 'org.epistatic.app5.Main'
+    doFirst {
+        jvmArgs = [
+                '--module-path', "${JFX_INSTALL}/lib",
+                '--add-modules', 'javafx.fxml,javafx.controls'
+        ]
+    }
+}
+
 task collateInstall(type:Copy){
     delete "installBuild"
     mkdir "installBuild/lib"
